using-ingress/nginx1-app.yml
# app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-namespace
  name: app1
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      namespace: ingress-namespace
      labels:
        app: app1
    spec:
      containers:
        - name: app1-container
          image: nginx
          ports:
            - containerPort: 80
---
# app1-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-namespace
  name: app1-service
  labels:
    app: app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
