using-ingress/nginx2-app.yml
# app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-namespace
  name: app2
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      namespace: ingress-namespace
      labels:
        app: app2
    spec:
      containers:
        - name: app2-container
          image: nginx
          ports:
            - containerPort: 80
---
# app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
